<resources>
    <string name="app_name">QuizappMaja</string>
    <string name="title_activity_login_activitytest">LoginActivitytest</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_confirm">Login</string>
    <string name="login_forgor">Forgot password? Click here</string>
    <string name="prompt_passwordAgain">Repeat password</string>
    <string name="createAcc_confirm">Create account</string>
    <string name="prompt_email">Email</string>
    <string name="menu_statuslogin">Logged in as:</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_highscores">Highscores</string>
    <string name="menu_play">Play</string>
    <string name="chomode_single">Singleplayer</string>
    <string name="chomode_multi">Multiplayer</string>
    <string name="startround_start">Start game</string>
    <string name="prompt_back">Back</string>
    <string name="question_placeholder">answer</string>
    <string name="chocat_choose">Choose a category:</string>
    <string name="chocat_placeholder">category</string>
    <string name="question_next">Next question</string>
    <string name="question_finishround">Finish round</string>
    <string name="roundfin_finish">Round finished!</string>
    <string name="roundfin_choose">Choose next category</string>
    <string name="roundfin_quit">Exit game</string>
    <string name="gamefin_finish">Game finished!</string>
    <string name="gamefin_user_placeholder">user</string>
    <string name="gamefin_points">Points:</string>
    <string name="gamefin_result_placeholder">points</string>
    <string name="gamefin_restart">Play again</string>
    <string name="gamefin_menu">Main menu</string>
</resources>