<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RoundFinishActivity">

    <TextView
        android:id="@+id/roundfin_text_status"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/background_01dp"
        android:backgroundTintMode="multiply"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/roundfin_text_finish"
        android:layout_width="290dp"
        android:layout_height="139dp"
        android:background="@color/background_04dp"
        android:gravity="center"
        android:text="@string/roundfin_finish"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <Button
        android:id="@+id/roundfin_btn_choose"
        android:layout_width="335dp"
        android:layout_height="113dp"
        android:fontFamily="sans-serif"
        android:text="@string/roundfin_choose"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundfin_text_finish"
        app:layout_constraintVertical_bias="0.343"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/roundfin_btn_quit"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:fontFamily="sans-serif"
        android:text="@string/roundfin_quit"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundfin_text_finish"
        app:layout_constraintVertical_bias="0.842"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>